[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/speedup_powerup.png" type="Texture" id=1]
[ext_resource path="res://powerups/speedup.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 29.0604, 29.8885 )

[node name="SpeedupPowerUp" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="EffectTimer" type="Timer" parent="."]
wait_time = 30.0

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 10.0
[connection signal="body_entered" from="." to="." method="_on_FireRatePowerUp_body_entered"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_RespawnTimer_timeout"]
